tests/correctness/resources/tests/error-high-3.check
newSource1.scala:12: error: The Illegal transformation description object is nested inside the Transf transformation description object, a construction which is illegal (al least for now).
  object Illegal extends TransformationDescription {
         ^
one error found
